# roamer-bot

./: .gitignore  .gitmodules  ELECTRONICS_DESIGN_SPEC.md  README.md  STUDIO_MISSION_ROVER_ROADMAP.md  TO_BUY.md
brain/: README.md
brain/src/brain-stem/: CMakeLists.txt  package.xml
brain/src/brain-stem/launch/: brain-stem.launch
brain/src/brainstem/: CMakeLists.txt  batt_test.py  motor_test.py
brain/src/brainstem/launch/: brain-stem.launch
brain/src/brainstem/romi/: romi32U4_driver.py
brain/src/brainstem/scripts/: node.py  romi32U4_driver.py
brain/src/roamer/: package.xml
control-board/: .syntastic_cpp_config  README.md  data.csv  fix_tests.py  platformio.ini
control-board/include/: odometry.h
control-board/lib/kinematics/: Kinematics.cpp  Kinematics.h
control-board/lib/odometry/: Odometry.cpp  Odometry.h
control-board/lib/pid/: PID.cpp  PID.h
control-board/src/: main.cpp  odometry.cpp
control-board/test/desktop/: test_kinematics.h  test_main.cpp
control-board/test/embedded/: test_main.cpp  test_motor_control.cpp
docs/: legacy-romi-references.md  rom04a-drill.dxf
firmware/: CMakeLists.txt  DESIGN.md  README.md  roamer_rev_a.ioc  stm32f103cbtx.ld
firmware/include/: board.h  usb_cdc.h
firmware/src/: board.c  main.c  startup_stm32f103xb.s  system.c  usb_cdc.c
hardware/: README.md  hardware.ioc  power-architecture-design-thinking.md  rev-a-motor-driver-spec.md  rev-a-motor-power-layout-checklist.md  rev-a-placement-review-todo.md  rev-a-power-spec.md  rev-a-schematic-review.md  rev-a-schematic-wrap-up-todo.md  rev-a-stm32-mcu-requirements.md  rev-b-upgrade-plan.md  romi-32u4-power-reference.md
hardware/driver-board/: driver-board.csv  driver-board.kicad_pcb  driver-board.kicad_prl  driver-board.kicad_pro  driver-board.kicad_sch  fp-lib-table  motor_control.kicad_sch  power.kicad_sch  usb.kicad_sch
hardware/driver-board/3dmodels/: README.md  SK-3296S-01-L2.wrl
hardware/driver-board/CustomParts.pretty/: AO4407A_SO-8_GSD.kicad_mod  MountingHole_2.3mm_2-56.kicad_mod  Romi_Chassis_BatteryContactPair_2Slot_10_44mm_FirstPass.kicad_mod  Romi_Chassis_BatteryContactPair_2Slot_14_50mm.kicad_mod  SW_SPDT_Angled_YuenFung_MT-O-102-C003-N003-RS.kicad_mod  SW_SPDT_RightAngle_XKB_SK-3296S-01-L2.kicad_mod
hardware/driver-board/mfr/: driver-board-jlc-bom.csv  driver-board-jlc-cpl.csv
hardware/driver-board/simulations/: pmos-power-switch-falstad.xml
hardware/releases/: rev-a-jlcpcb-2026-07-18.md
host/: README.md
legacy/old-romi/: README.md
legacy/old-romi/brain/: remote.sh
legacy/old-romi/control-board/: .syntastic_cpp_config  platformio.ini
(+10 files in other folders)
